@@ -3,6 +3,7 @@ Unreleased Version 2.2.0-pre
  * Fix: Allow indirect mode in 2.1 sessions when opacity dynamics are disabled. Thanks to Blozzom for reporting.
  * Fix: Make LCH color wheel circle not look so bright and discontinuous.
  * Fix: Refresh canvas view harder on resize to avoid artifacts on some systems. Thanks xxxx for reporting.
+ * Fix: Use proper background color in resize dialog. Thanks xxxx for reporting.
 
 2023-09-30 Version 2.2.0-beta.8
  * Fix: Apply color wheel direction to color dialogs too. Thanks Blozzom for reporting.
